RESULTS/AutoSpec/raw_results/out-4o-oopsla/017_0015/017_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/017_0015/017_merged.c:25:3: error: unterminated comment
   25 |   /*@;
      |   ^
